@@ -8,6 +8,7 @@
 @import "mixins/grid";
 @import "mixins/input";
 @import "mixins/margin";
+@import "mixins/modernizr";
 @import "mixins/padding";
 @import "mixins/pseudo";
 @import "mixins/push-auto";
